--- a/source/instruktsiia-octopress/index.html
+++ b/source/instruktsiia-octopress/index.html
@@ -19,6 +19,8 @@ footer: true
 	</li>
 </ul>
 
+<strong>Важно:</strong> для запуска из терминала rvm и всего остального нужно в настройках терминала поставить галку "Run command as a login shell"
+
 <h2>Настройка деплоймента</h2>
 
 <ul>
