Added welcome section on index page

--- a/index.html
+++ b/index.html
@@ -20,4 +20,30 @@ layout: default
 
   <p class="rss-subscribe">подпишитесь <a href="{{ "/feed.xml" | prepend: site.baseurl }}">на RSS</a></p>
 
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.4.0/trianglify.min.js"></script>
+<script>
+    function generateCanvas() {    
+      var pattern = Trianglify({
+          width: window.innerWidth,
+          height: window.innerHeight
+      });
+
+      return pattern.canvas();
+    }
+
+    function updateCanvas() {
+      $('#welcome .background').html(generateCanvas());
+    }
+
+    $(function() {
+      $( window ).resize(function() {
+        updateCanvas();
+      });
+
+      // First time generation
+      updateCanvas();
+    });
+</script>
+
 </div>
