Added scripts locally

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ layout: default
 
   <p class="rss-subscribe">подпишитесь <a href="{{ "/feed.xml" | prepend: site.baseurl }}">на RSS</a></p>
 
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.4.0/trianglify.min.js"></script>
+<script src="/assets/libs/trianglify.min.js"></script>
 <script>
     function generateCanvas() {    
       var pattern = Trianglify({
