Added Font Awesome

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
         </div>
 
         <div class="comments-count">
-          <a href="{{ post.url | prepend: site.baseurl }}#disqus_thread">Комментарии</a>
+          <i class="fa fa-comments-o"></i>&nbsp;<a href="{{ post.url | prepend: site.baseurl }}#disqus_thread">Комментарии</a>
         </div>
       </li>
     {% endfor %}
