--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
             {{ post.excerpt | strip_html }}
           </div>
 
-          <ul class="tag_list">
+          <ul class="tag-list">
             {% for tag in post.tags %}
-            <li class="inline archive_list"><a class="tag_list_link" href="/tag/#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
+            <li class="inline archive_list"><a class="tag" href="/tag/#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
             {% endfor %}
           </ul>
 
