--- a/tag.html
+++ b/tag.html
@@ -10,8 +10,8 @@ The following part extracts all the tags from your posts and sort tags, so that 
 {% endcomment %}
 {% assign rawtags = "" %}
 {% for post in site.posts %}
-	{% assign ttags = post.tags | join:'|' | append:'|' %}
-	{% assign rawtags = rawtags | append:ttags %}
+{% assign ttags = post.tags | join:'|' | append:'|' %}
+{% assign rawtags = rawtags | append:ttags %}
 {% endfor %}
 {% assign rawtags = rawtags | split:'|' | sort %}
 
@@ -22,14 +22,14 @@ The following part removes dulpicated tags and invalid tags like blank tag.
 {% endcomment %}
 {% assign tags = "" %}
 {% for tag in rawtags %}
-	{% if tag != "" %}
-		{% if tags == "" %}
-			{% assign tags = tag | split:'|' %}
-		{% endif %}
-		{% unless tags contains tag %}
-			{% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
-		{% endunless %}
-	{% endif %}
+{% if tag != "" %}
+{% if tags == "" %}
+{% assign tags = tag | split:'|' %}
+{% endif %}
+{% unless tags contains tag %}
+{% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
+{% endunless %}
+{% endif %}
 {% endfor %}
 
 {% comment %}
@@ -38,7 +38,7 @@ The purpose of this snippet is to list all the tags you have in your site.
 =======================
 {% endcomment %}
 {% for tag in tags %}
-	<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+<a class="tag" href="#{{ tag | slugify }}"><i class="fa fa-tag"></i>&nbsp;{{ tag }} </a>
 {% endfor %}
 
 {% comment %}
@@ -47,15 +47,13 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 =======================
 {% endcomment %}
 {% for tag in tags %}
-	<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
-	<ul>
-	 {% for post in site.posts %}
-		 {% if post.tags contains tag %}
-		 <li>
-		 <h3>
-		 <a href="{{ post.url }}">
-		 {{ post.title }}
-		 <small>{% assign m = post.date | date: "%-m" %}
+<h1 id="{{ tag | slugify }}">{{ tag }}</h1>
+<ul class="posts-by-tag">
+	{% for post in site.posts %}
+	{% if post.tags contains tag %}
+	<li>
+		<h3>
+			{% assign m = post.date | date: "%-m" %}
 			{{ post.date | date: "%-d" }}
 			{% case m %}
 			{% when '1' %}января
@@ -71,14 +69,13 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 			{% when '11' %}ноября
 			{% when '12' %}декабря
 			{% endcase %}
-			{{ post.date | date: "%Y" }}</small>
-		 </a>
-		 {% for tag in post.tags %}
-			 <a class="tag" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
-		 {% endfor %}
-		 </h3>
-		 </li>
-		 {% endif %}
-	 {% endfor %}
-	</ul>
+			{{ post.date | date: "%Y" }}
+			<a href="{{ post.url }}">
+				{{ post.title }}
+			</a>
+		</h3>
+	</li>
+	{% endif %}
+	{% endfor %}
+</ul>
 {% endfor %}
