Some changes in blog styles and posts

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
           </h2>
 
           <div class="post-preview clearfix">
-            {{ post.excerpt | strip_html }}
+            {{ post.excerpt }}   <!-- {\{ post.excerpt | strip_html }\} -->
           </div>
 
           <ul class="tag-list">
