--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
 
           <ul class="tag-list">
             {% for tag in post.tags %}
-            <li class="inline archive_list"><a class="tag" href="/tag/#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
+            <li class="inline archive_list"><a class="tag" href="/tag#{{tag}}"><i class="fa fa-tag"></i>&nbsp;{{tag}}</a></li>
             {% endfor %}
           </ul>
 
