--- a/urldecoder/index.html
+++ b/urldecoder/index.html
@@ -5,14 +5,16 @@
 	<title>Декодер строки в URL</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
-<body>
+<body lang="en">
 
 	<div class="wrapper">
 		<h1>Декодер строки в URL</h1>
 		<p><textarea placeholder="Исходная строка с данными"></textarea></p>
 		<p><input type="text" placeholder="Базовый путь"></p>
 		<div><button id="calc">Получить URL</button></div>
-		<div class="result"></div>
+		<div class="output">
+			<div id="result">Тут будет результат</div>
+		</div>
 	</div>
 
 <script type="text/javascript" src="lib/jquery-2.1.4.min.js"></script>
